# reaction_diffusion

./: pyproject.toml
src/: pit.py
