[project]
name = "reaction-diffusion"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "MIZUGUCHI Yasuhiko", email = "mizugy@gmail.com" }
]
dependencies = [
    "pygame>=2.5.2",
    "numpy>=1.26.4",
    "opencv-python>=4.9.0.80",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/reaction_diffusion"]
